--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
-  "devDependencies": {"shadow-cljs": "2.15.5"}
+  "devDependencies": {
+    "semantic-ui-react": "^2.0.4",
+    "shadow-cljs": "2.15.5"
+  }
 }
